--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ngtools/json-schema": "^1.1.0",
     "autoprefixer": "^7.1.1",
     "browserslist": "^2.1.5",
-    "commander": "^2.11.0",
+    "commander": "^2.12.0",
     "cpx": "^1.5.0",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
@@ -65,7 +65,7 @@
     "@commitlint/cli": "^5.0.0",
     "@commitlint/config-angular": "^5.0.0",
     "@types/chai": "^4.0.0",
-    "@types/commander": "^2.11.0",
+    "@types/cpx": "^1.5.0",
     "@types/fs-extra": "^4.0.2",
     "@types/jasmine": "^2.5.51",
     "@types/less": "^0.0.32",
