feat: resource inlining w/ TypeScript transformations (#279)
Significantly changes the transformation process for inlining `templateUrl` and `stylesUrl` by using TypeScript Transformation API. Resource inlining becomes a two-pass TypeScript AST transformation:
- First pass: extracts `templateUrl` and `stylesUrl` from the AT
- In between: processes assets (html templates, css/scss/less/styl stylesheets) and keep transformation results in memory
- Second pass: inlines `templateUrl` and `stylesUrl` in a dedicated AST transformation
- Further processing w/ `ngc` uses the TypeScript transformation result in-memory for reading source files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,18 @@
       "request": "launch",
       "name": "yarn samples:dev",
       "program": "${workspaceRoot}/integration/samples.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "sample: material",
+      "program": "${workspaceRoot}/integration/samples/material/build.dev.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "sample: same-name",
+      "program": "${workspaceRoot}/integration/samples/same-name/build.dev.js"
     }
   ],
   "compounds": []
