--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "cpx": "^1.5.0",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
-    "gulp-inline-ng2-template": "^4.0.0",
     "less": "^2.7.2",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
@@ -44,9 +43,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "sorcery": "^0.10.0",
     "stylus": "^0.54.5",
-    "ts-node": "^3.0.4",
-    "uglify-js": "^3.0.7",
-    "vinyl-fs": "^2.4.4"
+    "uglify-js": "^3.0.7"
   },
   "peerDependencies": {
     "@angular/compiler": "~5.0.0",
@@ -54,7 +51,7 @@
     "typescript": "~2.4.2"
   },
   "devDependencies": {
-    "@angular/cdk": "~5.0.0-rc0",
+    "@angular/cdk": "~5.0.0-rc.0",
     "@angular/common": "~5.0.0",
     "@angular/compiler": "~5.0.0",
     "@angular/compiler-cli": "~5.0.0",
@@ -88,6 +85,7 @@
     "rxjs": "^5.4.0",
     "sinon": "^4.0.0",
     "standard-version": "^4.0.0",
+    "ts-node": "^3.0.4",
     "typescript": "~2.4.2",
     "zone.js": "^0.8.10"
   },
@@ -103,7 +101,7 @@
     "publish:ci": "yarn prerelease && yarn postrelease",
     "samples": "integration/samples.sh",
     "samples:dev": "node integration/samples.js",
-    "samples:test": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --compilers ts:ts-node/register integration/samples/*/specs/**/*.ts",
+    "samples:test": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register integration/samples/*/specs/**/*.ts",
     "consumer": "integration/consumer.sh",
     "test": "yarn build && yarn samples && yarn samples:test && yarn consumer",
     "commitmsg": "commitlint -e",
