--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "less": "^2.7.2",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
+    "node-sass-tilde-importer": "^1.0.0",
     "postcss": "^6.0.2",
     "read-file": "^0.2.0",
     "rimraf": "^2.6.1",
