--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/chai": "^4.0.0",
     "@types/cpx": "^1.5.0",
     "@types/fs-extra": "^4.0.2",
+    "@types/glob": "^5.0.33",
     "@types/jasmine": "^2.5.51",
     "@types/less": "^0.0.32",
     "@types/lodash": "^4.14.77",
