--- a/src/lib/conf/tsconfig.ngc.json
+++ b/src/lib/conf/tsconfig.ngc.json
@@ -20,6 +20,7 @@
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "importHelpers": true,
     "lib": [
       "dom",
       "es2015"
