--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "peerDependencies": {
     "@angular/compiler": "~5.0.0",
     "@angular/compiler-cli": "~5.0.0",
+    "tsickle": "^0.24.1",
     "typescript": "~2.4.2"
   },
   "devDependencies": {
