fix: peer depend on angular >=5.0.0 <6.0.0, typescript >= 2.4.2 < 3.0.0

--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "uglify-js": "^3.0.7"
   },
   "peerDependencies": {
-    "@angular/compiler": "~5.0.0",
-    "@angular/compiler-cli": "~5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "tsickle": "^0.24.1",
-    "typescript": "~2.4.2"
+    "typescript": "^2.4.2"
   },
   "devDependencies": {
     "@angular/cdk": "~5.0.0-rc.0",
