--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^4.5.3",
     "node-sass-tilde-importer": "^1.0.0",
     "postcss": "^6.0.2",
+    "postcss-url": "^7.3.0",
     "read-file": "^0.2.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.52.0",
