--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: node_js
-
 node_js:
-  - "node"
-  - "8"
-  - "7"
-  - "6"
-
-script: yarn test
-
+  - node
+  - '8'
+  - '7'
+  - '6'
+script: 'yarn test'
 cache:
   yarn: true
+notifications:
+  webhooks:
+    urls:
+      - 'https://www.travisbuddy.com/'
+    on_success: never
+    on_failure: always
+    on_start: never
+    on_cancel: never
+    on_error: never
