fix: set peerDependency tsickle to `>=0.24.0 <0.26"

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "peerDependencies": {
     "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
-    "tsickle": "^0.24.0",
+    "tsickle": ">=0.24.0 <0.26",
     "typescript": ">=2.4.2 <2.6"
   },
   "devDependencies": {
