--- a/src/tsconfig.packagr.json
+++ b/src/tsconfig.packagr.json
@@ -8,7 +8,7 @@
     "inlineSources": true,
     "declaration": true,
     "lib": ["es2015", "dom"],
-    "outDir": "dist",
+    "outDir": "../dist",
     "experimentalDecorators": true,
     "noEmitOnError": true,
     "noImplicitAny": false,
@@ -17,6 +17,6 @@
     ]
   },
   "files": [
-    "src/cli/main.ts"
+    "cli/main.ts"
   ]
 }
