refactor: inline module ids that are part of the source set

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -57,6 +57,13 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "sample: externals",
+      "program": "${workspaceRoot}/integration/samples.dev.js",
+      "args": [ "externals" ]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "sample: material",
       "program": "${workspaceRoot}/integration/samples.dev.js",
       "args": [ "material" ]
