feat: discover entry points from user packages (#383)
Closes: #190

BREAKING CHANGES: Discovery of primary and secondary entry points is changed to read from the following file sources. File locations are tried in this order:
 - `package.json` with `ngPackage` property
 - `ng-package.json` (requires a `package.json` as sibling)
 - `ng-package.js` (with a default export, requires a `package.json` as sibling)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -71,6 +71,12 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "sample: package-js",
+      "program": "${workspaceRoot}/integration/samples/package-js/build.dev.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "sample: same-name",
       "program": "${workspaceRoot}/integration/samples.dev.js",
       "args": [ "same-name" ]
