--- a/package.json
+++ b/package.json
@@ -106,10 +106,10 @@
     "integration:samples": "integration/samples.sh",
     "integration:samples:dev": "./integration/samples.dev.js",
     "integration:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register integration/samples/*/specs/**/*.ts",
-    "integration:consumer": "integration/consumer.sh",
-    "integration:consumer:ngc": "ngc -p integration/consumers/tsc/tsconfig.json",
+    "integration:consumers": "integration/consumer.sh",
+    "integration:consumers:ngc": "ngc -p integration/consumers/tsc/tsconfig.json",
     "test:specs": "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json mocha --require ts-node/register src/**/*.spec.ts",
-    "test": "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:consumer",
+    "test": "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:consumers",
     "commitmsg": "commitlint -e",
     "gh-pages": "gh-pages -d docs/ghpages"
   },
