test: depend on `@sample/secondary` in Angular CLI app (#450)

--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^5.0.2",
     "@angular/common": "~5.1.0",
     "@angular/compiler": "~5.1.0",
     "@angular/core": "~5.1.0",
