--- a/integration/samples/secondary/package.json
+++ b/integration/samples/secondary/package.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../../../src/package.schema.json",
-  "name": "@sample/secondary-lib",
+  "name": "@sample/secondary",
   "description": "A sample library with configuration in package.json",
   "version": "1.0.0-pre.0",
   "private": true,
