fix: relax version constraints, enable TypeScript 2.6 (w/ tsickle ^0.26.0)
Updates dependeny tsickle to ^0.26.0, enabling TypeScript 2.6 usage. Valid version combinations are:
- tsickle >=0.25.5 <0.26 is supposed to work with TypeScript >=2.4.2 <2.6
- tsickle >=0.26.0 is supposed to work with TypeScript >=2.4.2 (and thus enables TypeScript 2.6 usage)

--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
   "peerDependencies": {
     "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
-    "tsickle": ">=0.25.5 <0.26",
-    "typescript": ">=2.4.2 <2.6"
+    "tsickle": ">=0.25.5",
+    "typescript": ">=2.4.2"
   },
   "devDependencies": {
     "@angular-devkit/core": "^0.0.23",
@@ -91,7 +91,7 @@
     "sinon": "^4.0.0",
     "standard-version": "^4.0.0",
     "ts-node": "^4.0.0",
-    "tsickle": "^0.25.5",
+    "tsickle": "^0.26.0",
     "typescript": "~2.5.1",
     "zone.js": "^0.8.10"
   },
