--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cpx": "^1.5.0",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
+    "injection-js": "^2.2.1",
     "less": "^2.7.2",
     "node-sass": "^4.5.3",
     "node-sass-tilde-importer": "^1.0.0",
@@ -43,6 +44,7 @@
     "rollup": "^0.53.0",
     "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "rxjs": "^5.5.0",
     "sorcery": "^0.10.0",
     "stylus": "^0.54.5",
     "uglify-js": "^3.0.7"
@@ -87,7 +89,6 @@
     "mocha": "^4.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "rxjs": "^5.4.0",
     "sinon": "^4.0.0",
     "standard-version": "^4.0.0",
     "ts-node": "^4.0.0",
