feat: add language level support for library authors (#486)

--- a/integration/samples/language-level/package.json
+++ b/integration/samples/language-level/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@sample/embed-assets",
-  "description": "A sample library with embedded css assets",
+  "name": "@sample/language-level",
+  "description": "A sample library to test es2016/es2017 syntax in TypeScript",
   "version": "1.0.0-pre.0",
   "private": true,
   "repository": "https://github.com/dherges/ng-packagr.git",
