fix: strip comments from processed styles (#512)
Fixes #503

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "jasmine": "^2.6.0",
     "json-schema-to-typescript": "^5.0.0",
     "mocha": "^5.0.0",
+    "postcss-discard-comments": "^2.0.4",
     "prettier": "^1.10.2",
     "pretty-quick": "^1.2.1",
     "react": "^16.0.0",
