--- a/package.json
+++ b/package.json
@@ -115,7 +115,8 @@
       "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register integration/samples/*/specs/**/*.ts",
     "integration:consumers": "integration/consumers.sh",
     "integration:consumers:ngc": "ngc -p integration/consumers/tsc/tsconfig.json",
-    "test:specs": "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json mocha --require ts-node/register src/**/*.spec.ts",
+    "test:specs":
+      "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json mocha --require ts-node/register 'src/**/*.spec.ts'",
     "test":
       "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:consumers",
     "commitmsg": "commitlint -e",
