--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rxjs": "^5.5.0",
     "sorcery": "^0.10.0",
+    "strip-bom": "^3.0.0",
     "stylus": "^0.54.5",
     "uglify-js": "^3.0.7"
   },
@@ -80,6 +81,7 @@
     "@types/react-dom": "^16.0.2",
     "@types/rollup": "^0.51.2",
     "@types/sinon": "^4.0.0",
+    "@types/strip-bom": "^3.0.0",
     "chai": "^4.0.1",
     "copyfiles": "^1.2.0",
     "cross-env": "^5.0.5",
@@ -111,14 +113,11 @@
     "publish:ci": "yarn prerelease && yarn postrelease",
     "integration:samples": "integration/samples.sh",
     "integration:samples:dev": "ts-node --project src/tsconfig.packagr.json ./integration/samples.dev.ts",
-    "integration:specs":
-      "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register integration/samples/*/specs/**/*.ts",
+    "integration:specs": "cross-env TS_NODE_PROJECT=integration/tsconfig.specs.json mocha --require ts-node/register integration/samples/*/specs/**/*.ts",
     "integration:consumers": "integration/consumers.sh",
     "integration:consumers:ngc": "ngc -p integration/consumers/tsc/tsconfig.json",
-    "test:specs":
-      "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json mocha --require ts-node/register 'src/**/*.spec.ts'",
-    "test":
-      "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:consumers",
+    "test:specs": "cross-env TS_NODE_PROJECT=src/tsconfig.specs.json mocha --require ts-node/register \"src/**/*.spec.ts\"",
+    "test": "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:consumers",
     "commitmsg": "commitlint -e",
     "precommit": "pretty-quick --staged",
     "gh-pages": "gh-pages -d docs/ghpages"
