--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "postcss-url": "^7.3.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.55.0",
+    "rollup-plugin-cleanup": "^2.0.0",
     "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-license": "^0.5.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rxjs": "^5.5.0",
     "sorcery": "^0.10.0",
