--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "node-sass": "^4.5.3",
     "node-sass-tilde-importer": "^1.0.0",
     "postcss": "^6.0.2",
-    "postcss-discard-comments": "^2.0.4",
+    "postcss-clean": "^1.1.0",
     "postcss-url": "^7.3.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.55.0",
