fix: add `chalk` to dependencies (#647)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngtools/json-schema": "^1.1.0",
     "autoprefixer": "^7.1.1",
     "browserslist": "^2.1.5",
+    "chalk": "^2.3.1",
     "commander": "^2.12.0",
     "cpx": "^1.5.0",
     "fs-extra": "^5.0.0",
