--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,20 +5,9 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "target": "es5",
-    "lib": [
-      "es2015",
-      "es2016"
-    ],
-    "types": [
-      "chai",
-      "mocha",
-      "node",
-      "sinon"
-    ],
+    "lib": ["es2015", "es2016"],
+    "types": ["chai", "mocha", "node", "sinon"],
     "jsx": "react"
   },
-  "exclude": [
-    "dist",
-    ".ng_build"
-  ]
+  "exclude": ["dist", ".ng_build", "integration"]
 }
