--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss": "^6.0.2",
     "postcss-clean": "^1.1.0",
     "postcss-url": "^7.3.0",
+    "read-pkg-up": "^3.0.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.55.0",
     "rollup-plugin-cleanup": "^2.0.0",
@@ -52,7 +53,8 @@
     "sorcery": "^0.10.0",
     "strip-bom": "^3.0.0",
     "stylus": "^0.54.5",
-    "uglify-js": "^3.0.7"
+    "uglify-js": "^3.0.7",
+    "update-notifier": "^2.3.0"
   },
   "peerDependencies": {
     "@angular/compiler": "^5.0.0",
@@ -84,8 +86,10 @@
     "@types/node": "^9.3.0",
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
+    "@types/read-pkg-up": "^3.0.1",
     "@types/sinon": "^4.0.0",
     "@types/strip-bom": "^3.0.0",
+    "@types/update-notifier": "^2.0.0",
     "chai": "^4.0.1",
     "copyfiles": "^1.2.0",
     "cross-env": "^5.0.5",
