--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "rimraf": "^2.6.1",
     "rollup": "^0.55.0",
     "rollup-plugin-cleanup": "^2.0.0",
-    "rollup-plugin-commonjs": "^8.2.1",
+    "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-license": "^0.6.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rxjs": "^5.5.0",
