--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sorcery": "^0.10.0",
     "strip-bom": "^3.0.0",
     "stylus": "^0.54.5",
+    "tar": "^4.4.1",
     "uglify-js": "^3.0.7",
     "update-notifier": "^2.3.0"
   },
