--- a/src/tsconfig.packagr.json
+++ b/src/tsconfig.packagr.json
@@ -7,7 +7,7 @@
     "inlineSourceMap": false,
     "inlineSources": true,
     "declaration": true,
-    "lib": ["es2015", "dom"],
+    "lib": ["es2015"],
     "outDir": "../dist",
     "experimentalDecorators": true,
     "noEmitOnError": true,
