--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "postcss-url": "^7.3.0",
     "read-pkg-up": "^3.0.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.55.0",
+    "rollup": "^0.57.1",
     "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rxjs": "^5.5.0",
@@ -57,7 +57,7 @@
   "peerDependencies": {
     "@angular/compiler": "^5.0.0 || ^6.0.0-rc.0",
     "@angular/compiler-cli": "^5.0.0 || ^6.0.0-rc.0",
-    "tsickle": ">=0.25.5",
+    "tsickle": ">=0.27.3",
     "tslib": "^1.7.1",
     "typescript": ">=2.4.2"
   },
@@ -101,9 +101,10 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "sinon": "^4.0.0",
+    "source-map": "^0.6.1",
     "standard-version": "^4.0.0",
     "ts-node": "^5.0.0",
-    "tsickle": "^0.27.1",
+    "tsickle": "^0.27.3",
     "tslib": "^1.7.1",
     "typescript": "~2.6.1",
     "zone.js": "^0.8.10"
