feat: remove deprecated code (#773)
BREAKING CHANGE:

Removes several deprecated code items.

- option `sassIncludePaths` is removed, please use `styleIncludePaths` instead
- option `workingDirectory` is removed, removed corresponding getter from `NgPackage` class
- method `createNgPackage` removed from programmatic API
- removed `NgArtefacts` class from API
- removed `BuildStep` interface from API

--- a/integration/samples/scss-paths/package.json
+++ b/integration/samples/scss-paths/package.json
@@ -15,7 +15,7 @@
   "ngPackage": {
     "lib": {
       "entryFile": "public_api.ts",
-      "sassIncludePaths": ["./assets"]
+      "styleIncludePaths": ["./assets"]
     }
   }
 }
