--- a/integration/samples/scss-paths/sub-module/package.json
+++ b/integration/samples/scss-paths/sub-module/package.json
@@ -12,7 +12,7 @@
   "ngPackage": {
     "lib": {
       "entryFile": "index.ts",
-      "sassIncludePaths": ["../assets", "./assets"]
+      "styleIncludePaths": ["../assets", "./assets"]
     }
   }
 }
