--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/read-pkg-up": "^3.0.1",
     "@types/sinon": "^4.0.0",
     "@types/strip-bom": "^3.0.0",
+    "@types/uglify-js": "^3.0.2",
     "@types/update-notifier": "^2.0.0",
     "chai": "^4.0.1",
     "copyfiles": "^2.0.0",
