--- a/integration/samples/core/package.json
+++ b/integration/samples/core/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0-pre.0",
   "private": true,
   "repository": "https://github.com/dherges/ng-packagr.git",
+  "sideEffects": true,
   "peerDependencies": {
     "@angular/common": "^4.1.3",
     "@angular/core": "^4.1.3",
