--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: node_js
 node_js:
   - node
+  - '9'
   - '8'
 script: 'yarn test'
 cache:
   yarn: true
+matrix:
+  allow_failures:
+  - node_js: 10
 notifications:
   webhooks:
     urls:
