build: update dev dependencies to angular 6

--- a/package.json
+++ b/package.json
@@ -63,14 +63,14 @@
   },
   "devDependencies": {
     "@angular-devkit/core": "^0.5.0",
-    "@angular/cdk": "~5.2.0",
-    "@angular/common": "~5.2.0",
-    "@angular/compiler": "~5.2.0",
-    "@angular/compiler-cli": "~5.2.0",
-    "@angular/core": "~5.2.0",
-    "@angular/http": "~5.2.0",
-    "@angular/language-service": "~5.2.0",
-    "@angular/platform-browser": "~5.2.0",
+    "@angular/cdk": "^6.0.0-rc.6",
+    "@angular/common": "^6.0.0-rc.6",
+    "@angular/compiler": "^6.0.0-rc.6",
+    "@angular/compiler-cli": "^6.0.0-rc.6",
+    "@angular/core": "^6.0.0-rc.6",
+    "@angular/http": "^6.0.0-rc.6",
+    "@angular/language-service": "^6.0.0-rc.6",
+    "@angular/platform-browser": "^6.0.0-rc.6",
     "@commitlint/cli": "^6.0.0",
     "@commitlint/config-angular": "^6.0.2",
     "@types/acorn": "^4.0.3",
@@ -108,7 +108,7 @@
     "ts-node": "^6.0.0",
     "tsickle": "^0.27.3",
     "tslib": "^1.7.1",
-    "typescript": "~2.6.1",
+    "typescript": "~2.7.2",
     "zone.js": "^0.8.10"
   },
   "private": true,
