test: add rxjs-compat to keep integration tests unchanged

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "pretty-quick": "^1.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "rxjs-compat": "^6.0.0",
     "sinon": "^5.0.0",
     "source-map": "^0.7.0",
     "standard-version": "^4.0.0",
