--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "read-pkg-up": "^3.0.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.58.0",
-    "rollup-plugin-commonjs": "9.1.2",
+    "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rxjs": "^6.0.0",
     "sorcery": "^0.10.0",
