--- a/integration/consumers/ng-cli/package.json
+++ b/integration/consumers/ng-cli/package.json
@@ -6,33 +6,34 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:dev": "ng build --target development",
-    "build:prod:jit": "ng build --target production",
-    "build:prod:aot": "ng build --target production --aot",
+    "build:dev": "ng build",
+    "build:prod:jit": "ng build --prod --aot=false --build-optimizer=false",
+    "build:prod:aot": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^5.0.2",
-    "@angular/common": "~5.2.0",
-    "@angular/compiler": "~5.2.0",
-    "@angular/core": "~5.2.0",
-    "@angular/forms": "~5.2.0",
-    "@angular/http": "~5.2.0",
-    "@angular/platform-browser": "~5.2.0",
-    "@angular/platform-browser-dynamic": "~5.2.0",
-    "@angular/router": "~5.2.0",
+    "@angular/cdk": "~6.0.0",
+    "@angular/common": "~6.0.0",
+    "@angular/compiler": "~6.0.0",
+    "@angular/core": "~6.0.0",
+    "@angular/forms": "~6.0.0",
+    "@angular/http": "~6.0.0",
+    "@angular/platform-browser": "~6.0.0",
+    "@angular/platform-browser-dynamic": "~6.0.0",
+    "@angular/router": "~6.0.0",
     "core-js": "^2.4.1",
     "rxjs": "~6.1.0",
-    "zone.js": "^0.8.12"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/schematics": "^0.6.0",
-    "@angular/cli": "~1.7.0",
-    "@angular/compiler-cli": "~5.2.0",
-    "@angular/language-service": "~5.2.0",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/schematics": "~0.6.0",
+    "@angular/cli": "~6.0.0",
+    "@angular/compiler-cli": "~6.0.0",
+    "@angular/language-service": "~6.0.0",
     "@types/jasmine": "~2.8.0",
     "@types/node": "~9.6.0",
     "codelyzer": "~4.3.0",
@@ -47,6 +48,6 @@
     "protractor": "~5.3.0",
     "ts-node": "~6.0.0",
     "tslint": "~5.10.0",
-    "typescript": "~2.6.1"
+    "typescript": "2.7.2"
   }
 }
