fix: handle nested entry points with same name (#850)
Using `path.basename()` causes an issue that nested entrypoints will lose their full path, which might also cause accidental override of modules if they share the same name (last portion of path).

Closes #851, #849

--- a/integration/tsconfig.specs.json
+++ b/integration/tsconfig.specs.json
@@ -5,23 +5,10 @@
     "target": "es5",
     "allowJs": true,
     "experimentalDecorators": true,
-    "lib": [
-      "es2015",
-      "es2016"
-    ],
-    "types": [
-      "chai",
-      "mocha",
-      "node",
-      "sinon"
-    ]
+    "lib": ["es2015", "es2016"],
+    "types": ["chai", "mocha", "node", "sinon"],
+    "typeRoots": ["../node_modules/@types"]
   },
-  "include": [
-    "**/specs/*.ts"
-  ],
-  "exclude": [
-    ".ng_build",
-    ".ng_pkgr_build",
-    ".ng_pkg_build"
-  ]
+  "include": ["**/specs/*.ts"],
+  "exclude": [".ng_build", ".ng_pkgr_build", ".ng_pkg_build"]
 }
