fix: inline sourcemaps as base64-encoded data URI in esm5/esm015 (#812)
Fixes an issue where sourcemaps are not working when rebuilding during webpack watch.

What this change brings is:
- `relocation` and `rewiring` of sourcemaps happens during flattening part.
- `ESM5` and `ESM2015` has inlined sourcemaps which conforms with `APF V6`. The source mapps are inlined with `//# sourceMappingURL=data:application/json;base64,<sourcesContent>`
- Downleveling of `ESM2015` to `ESM5` has been removed in favor of an `ngc` parallel build this improve the build time by approx 10% in some cases. This is also a step towards incremental builds.

Closes #785 #803

--- a/integration/samples/api/tsconfig.ngc.json
+++ b/integration/samples/api/tsconfig.ngc.json
@@ -16,7 +16,7 @@
     "moduleResolution": "node",
     "outDir": "",
     "declaration": true,
-    "sourceMap": true,
+    "inlineSourceMap": true,
     "inlineSources": true,
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
