--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rxjs": "^6.0.0",
-    "sorcery": "^0.10.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
     "strip-bom": "^3.0.0",
     "stylus": "^0.54.5",
     "uglify-js": "^3.0.7",
