--- a/src/tsconfig.specs.json
+++ b/src/tsconfig.specs.json
@@ -9,6 +9,5 @@
     "types": ["chai", "mocha", "node", "sinon"],
     "typeRoots": ["../node_modules/@types"]
   },
-  "include": ["**/specs/*.ts"],
-  "exclude": [".ng_build", ".ng_pkgr_build", ".ng_pkg_build"]
+  "include": ["**/specs/*.ts"]
 }
