fix: don't add dependency to `tslib` in secondary entrypoints (#858)
`tslib` dependency is only needed at npm package level, not in `package.json` of secondaries.

--- a/src/tsconfig.packagr.json
+++ b/src/tsconfig.packagr.json
@@ -13,7 +13,8 @@
     "noEmitOnError": true,
     "noImplicitAny": false,
     "skipLibCheck": true, // due to: https://github.com/angular/angular/issues/23112
-    "types": ["node"]
+    "types": ["node"],
+    "typeRoots": ["../node_modules/@types"]
   },
   "files": ["cli/main.ts", "public_api.ts"],
   "exclude": ["**/*.spec.ts"]
