--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@angular/http": "~6.0.0",
     "@angular/language-service": "~6.0.0",
     "@angular/platform-browser": "~6.0.0",
+    "@angular/router": "~6.0.0",
     "@commitlint/cli": "^6.0.0",
     "@commitlint/config-angular": "^6.0.2",
     "@types/acorn": "^4.0.3",
