fix: auto-wire paths for transitive dependencies of entry points (#875)
Config paths needs to be added for all entry points and are also required when analysing.
This change makes sure that also transitive dependencies, like a -> b -> c, the path of c is configured when building a.

Closes #852

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -100,6 +100,13 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Sample: issue-852",
+      "program": "${workspaceRoot}/integration/samples.dev.js",
+      "args": ["issue-852"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Sample: externals",
       "program": "${workspaceRoot}/integration/samples.dev.js",
       "args": ["externals"]
