feat: embed templates and stylesheets with ngc `enableResourceInlining` (#872)
Closes #770

BREAKING CHANGE:
- ng-packagr now requires a `peerDependency` of `@angular/compiler: ^6.0.0` and `@angular/compiler-cli: ^6.0.0`. Removes support for building packages with Angular compiler v5.
- Consumers using a constum tsconfig via the programmatic API need to add `enableResourceInlining` under `angularCompilerOptions`

--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "update-notifier": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/compiler": "^5.0.0 || ^6.0.0",
-    "@angular/compiler-cli": "^5.0.0 || ^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
     "tsickle": ">=0.27.3",
     "tslib": "^1.7.1",
     "typescript": ">=2.4.2"
