feat: add support for incremental builds (#884)
On command line, you can enable the watch by providing the `-w` or `--watch` options. For the API, you can use the `withOptions` method example.

CLI
```
ng-packagr --project ng-packagr.js --watch
```

API
```
ngPackage
  .ngPackagr()
  .forProject('ng-package.js')
  .withOptions({watch: true})
  .build()
```

This requires `enableResourceInlining` to be enabled and also this is a sort of MVP. There are more optimization that need to be done.

Closes #828 
Closes #743 
Closes #635

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -93,6 +93,13 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "Sample: scss-paths",
+      "program": "${workspaceRoot}/integration/samples.dev.js",
+      "args": ["scss-paths"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Sample: embed-assets",
       "program": "${workspaceRoot}/integration/samples.dev.js",
       "args": ["embed-assets"]
