--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "autoprefixer": "^8.0.0",
     "browserslist": "^3.0.0",
     "chalk": "^2.3.1",
+    "chokidar": "^2.0.3",
+    "clean-css": "^4.1.11",
     "commander": "^2.12.0",
     "cpx": "^1.5.0",
     "fs-extra": "^6.0.0",
@@ -40,16 +42,14 @@
     "node-sass": "^4.5.3",
     "node-sass-tilde-importer": "^1.0.0",
     "postcss": "^6.0.2",
-    "postcss-clean": "^1.1.0",
     "postcss-url": "^7.3.0",
     "read-pkg-up": "^3.0.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.60.0",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rxjs": "^6.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "strip-bom": "^3.0.0",
+    "rxjs": "^6.0.0",
     "stylus": "^0.54.5",
     "uglify-js": "^3.0.7",
     "update-notifier": "^2.3.0"
@@ -76,18 +76,21 @@
     "@commitlint/config-angular": "^7.0.0",
     "@types/acorn": "^4.0.3",
     "@types/chai": "^4.0.0",
+    "@types/chokidar": "^1.7.5",
+    "@types/clean-css": "^3.4.30",
     "@types/cpx": "^1.5.0",
     "@types/fs-extra": "^5.0.0",
     "@types/glob": "^5.0.33",
     "@types/jasmine": "^2.5.51",
-    "@types/less": "^0.0.33",
     "@types/mocha": "^5.0.0",
     "@types/node": "^10.0.0",
+    "@types/node-sass": "^3.10.32",
     "@types/react": "^16.0.19",
     "@types/react-dom": "^16.0.2",
     "@types/read-pkg-up": "^3.0.1",
-    "@types/sinon": "^5.0.0",
+    "@types/sinon": "^4.0.0",
     "@types/strip-bom": "^3.0.0",
+    "@types/stylus": "^0.48.30",
     "@types/uglify-js": "^3.0.2",
     "@types/update-notifier": "^2.0.0",
     "chai": "^4.0.1",
